Fix left spacing on categories in the cooliris nav bar

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -890,7 +890,7 @@ textarea {
 	margin-top: -10px;
 }
 .cooliris-nav .cooliris-cats li {
-	padding: 5px 0;
+	padding: 5px 0 5px 25px;
 	list-style: none;
 }
 .cooliris-cats-btn:hover .cooliris-cats-text,
